# aus-tco

./: .gitignore  .mypy.ini  README.md  SETUP.md  app.py  coverage.xml  implementation_plan.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
config/: economic_parameters.yaml  operational_parameters.yaml
config/defaults/: economic_parameters.yaml
config/economic/: economic_parameters.yaml
config/vehicles/: default_bet.yaml  default_bet_regional.yaml  default_bet_urban.yaml  default_ice.yaml  default_ice_regional.yaml  default_ice_urban.yaml
docs/: docstring_template.md  migration_guide.md
refactoring/: field_refactoring_analysis.md  implementation_plan.md  refactoring_overview.md  refactoring_phase1.md  refactoring_phase2.md  refactoring_phase3.md  refactoring_phase4.md  refactoring_phase5.md
scripts/: check_config.py  check_field_references.py  check_types.sh  run.sh
tco_model/: README.md  __init__.py  calculator.py  costs.py  models.py  schemas.py  strategies.py  terminology.py  vehicles.py
test_reports/: all_tests_output.txt  tco_extensions_tests.txt  ui_components_tests.txt  ui_integration_tests.txt  visualization_tests.txt
tests/: TESTING.md  __init__.py  conftest.py  coverage.xml  deprecated_tests.md  test_ui_integration.py
ui/: __init__.py  config_management.py  guide.py  layout.py  navigation_components.py  progressive_disclosure.py  sidebar.py  theme.py
unit/: test_bet_energy.py
utils/: __init__.py  config_utils.py  css_loader.py  helpers.py  navigation_state.py  state_management.py  ui_components.py  ui_terminology.py
(+82 files in other folders)
