[tool.poetry]
name = "aus-heavy-vehicle-tco"
version = "0.1.0"
description = "Australian Heavy Vehicle Total Cost of Ownership (TCO) Modeller"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.27.0"
pydantic = "^2.4.0"
pandas = "^2.1.0"
numpy = "^1.25.0"
numpy-financial = "^1.0.0"
plotly = "^5.16.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 